# ROS2_autonomous-traffic-robot

./: .gitignore  README.md
src/action/: action.py  debug.py
src/my_robot_world/: package.xml  setup.cfg  setup.py
src/my_robot_world/launch/: mission_world_official.launch.py
src/my_robot_world/models/100/: model.config  model.sdf
src/my_robot_world/models/100/materials/scripts/: maze.material
src/my_robot_world/models/green/: model.config  model.sdf
src/my_robot_world/models/green/materials/scripts/: maze.material
src/my_robot_world/models/maze/: model.sdf
src/my_robot_world/models/maze/materials/scripts/: maze.material
src/my_robot_world/models/slow/: model.config  model.sdf
src/my_robot_world/models/slow/materials/scripts/: maze.material
src/my_robot_world/models/stop/: model.config  model.sdf
src/my_robot_world/models/stop/materials/scripts/: Stop.material
src/my_robot_world/models/yellow/: model.config  model.sdf
src/my_robot_world/models/yellow/materials/scripts/: maze.material
src/my_robot_world/worlds/: mission_world.world
src/vision/traffic_light/traffic_light_data/: model.py
src/vision/traffic_signs/: transfer.py
src/vision/traffic_signs/transfer/: data.yaml  label_nums.py
src/vision/traffic_signs/transfer/TURN RIGHT TRAFFIC SIGN DATASET.v1-turn-right-traffic-sign-dataset.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
src/vision/traffic_signs/transfer/left traffic sign dataset.v2-turn-left-traffic-sign-dataset.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
(+2 files in other folders)
