<?xml version="1.0"?>
<package format="3">
  <name>my_robot_world</name>
  <version>0.0.0</version>
  <description>Custom Gazebo worlds for TurtleBot project</description>

  <maintainer email="cpc@example.com">cpc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
